--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  flutter_modulo1_fake_backend:
+    path: ../flutter_modulo1_fake_backend
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
